--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@react-icons/all-files": "^4.1.0",
     "@types/mysql": "^2.15.26",
     "axios": "^1.8.4",
+    "cors": "^2.8.5",
     "lucide-react": "^0.503.0",
     "node": "^18.20.8",
     "nodemailer": "^6.10.0",
