agregado funcion para eliminar los token expirados de la base de datos

--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.14.0",
     "node": "^18.20.8",
+    "node-cron": "^4.0.5",
     "nodemailer": "^6.10.0",
     "sequelize": "^6.37.7",
     "socket.io": "^4.8.1"
