--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@types/mysql": "^2.15.26",
     "axios": "^1.8.4",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.503.0",
     "node": "^18.20.8",
     "nodemailer": "^6.10.0",
