--- a/client/package.json
+++ b/client/package.json
@@ -18,13 +18,15 @@
     "axios": "^1.8.4",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.503.0",
     "node": "^18.20.8",
     "nodemailer": "^6.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.2.0"
+    "react-router-dom": "^7.2.0",
+    "swiper": "^11.2.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
