--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.8.4",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
+    "html2pdf.js": "^0.10.3",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.503.0",
     "node": "^18.20.8",
