--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "node-cron": "^4.0.7",
     "nodemailer": "^6.10.0",
     "passport-google-oauth2": "^0.2.0",
+    "pdfkit": "^0.17.1",
     "sequelize": "^6.37.7",
     "socket.io": "^4.8.1"
   },
